fixes z-index bugs

--- a/packages/cms/src/components/interface/Navbar.css
+++ b/packages/cms/src/components/interface/Navbar.css
@@ -5,7 +5,7 @@
   width: 100%;
   /* positioning */
   top: 0;
-  z-index: 3;
+  z-index: 4;
   /* theming */
   background-color: var(--light-1);
   box-shadow: 0 1px 0 var(--light-2);
@@ -24,7 +24,6 @@
   padding-right: var(--gutter-sm);
   display: flex;
   flex-wrap: wrap;
-  
 }
 
 /* reset buttons */
@@ -118,7 +117,7 @@
 
 .cms-navbar-settings-button {
   align-self: center;
-  z-index: 2;
+  z-index: 3;
   outline: none;
 
   &.is-active {
@@ -132,7 +131,7 @@
   top: 0;
   right: 0.375rem;
   width: 18.75rem;
-  z-index: 1; /* in front of overlay */
+  z-index: 2; /* in front of overlay */
   max-width: calc(100% - 0.75rem);
   /* theming */
   border-radius: 4px;
@@ -158,6 +157,7 @@
     @mixin absolute-expand;
     @mixin button-reset;
     position: fixed;
+    z-index: 1;
     background-color: color(var(--black) a(0.875));
     transition:
       opacity 0.2s ease-out,
